# optical_flow_sta

./: CMakeLists.txt  README.md  example_basic.sh  example_kth.py
optical_flow_sta.xcodeproj/: project.pbxproj
src/: FirstOrderDescriptor.cpp  FirstOrderDescriptor.h  Integrator.h  IntensityKernel.cpp  IntensityKernel.h  Kernel.h  MeanIntegrator.cpp  MeanIntegrator.h  OpticalFlowKernel.cpp  OpticalFlowKernel.h  SecondOrderDescriptor.cpp  SecondOrderDescriptor.h  Utilities.cpp  Utilities.h  helper.cpp  helper.h  main.cpp  optical_flow_sta.cpp  sta.cpp  sta.h
